# cash_system

./: .gitignore
cashcode_v3_driver/: README.md  main.py
cashcode_v3_driver/ccnet/: __init__.py  constants.py  crc.py  driver.py  protocol.py  (+1 more)
devices_v1/:  create_link_hopper.sh  cash_system.service  configs.py  event_system.py  payment_system_api.py  readme.md  redis_error_handler.py  run_queue_server.py  send_to_ws.py  test_pay.py
devices_v2/: cash_system.service  configs.py  event_system.py  loggers.py  main.py  payment_system_api.py  payment_system_cash_commands.py  pre_start.py  pyproject.toml  readme.md  redis_error_handler.py  run_queue_server.py  send_to_ws.py
devices_v2/application/: __init__.py  api_facade.py  command_handler.py  device_service.py  payment_service.py
devices_v2/core/: __init__.py  exceptions.py  interfaces.py  value_objects.py
devices_v2/devices/: cctalk_coin_acceptor.py
devices_v2/devices/bill_acceptor/: bill_acceptor_v2.py  bill_acceptor_v3.py
devices_v2/devices/bill_dispenser/: bill_dispenser.py
devices_v2/devices/ccnet/: __init__.py  constants.py  crc.py  driver.py  protocol.py  state_machine.py  transport.py
devices_v2/devices/ccnet/examples/: basic_usage.py
devices_v2/devices/ccnet/tests/: conftest.py  test_ccnet.py
devices_v2/devices/coin_acceptor/: index.py  parser.py  utils.py
devices_v2/domain/: __init__.py  device_adapters.py  device_manager.py  payment_state_machine.py
devices_v2/infrastructure/: __init__.py  redis_repository.py  settings.py
devices_v2/tests/: conftest.py  test_new_architecture.py
(+4 files in other folders)
